--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=spring-boot
-spring.datasource.url=jdbc:mysql://localhost:3306/java?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3308/datajpaliquibase?createDatabaseIfNotExist=true
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+#spring.liquibase.change-log=src/main/resources/db/changelog/db.changelog-master.yaml
+#logging.level.liquibase=DEBUG
+
