--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
 url=jdbc:mysql://localhost:3308/datajpaliquibase?serverTimeZone=UTC
-username=root
-password=1234
+username=user
+password=password
 driver=com.mysql.cj.jdbc.Driver
 changeLogFile=src/main/resources/db/changelog/db.changelog-master.yaml
