Add security and tests

--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -6,6 +6,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
-#spring.liquibase.change-log=src/main/resources/db/changelog/db.changelog-master.yaml
-#logging.level.liquibase=DEBUG
-
+jwt.expiration=300000
+jwt.secret=secret_pass
